# skypro_task_3

./: .gitignore  func.py  main.py  pyproject.toml  system_info.py
tests/: test_uni.py
