[tool.poetry]
name = "course-work-3"
version = "0.1.0"
description = ""
authors = ["savva.net <savva.net@icloud.com>"]
readme = "README.md"
packages = [{include = "course_work_3"}]
repository = "https://github.com/BigmasterSavage/skypro_task_3/tree/main"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"
requests = "^2.31.0"
coverage = "^7.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
